--- a/tecolotl-web/src/main/webapp/alumno/mapa-mental/11.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mapa-mental/11.xhtml
@@ -60,17 +60,14 @@
                             <h:graphicImage library="img" name="mounstro/whose.svg"/>
                         </div>
                         <div class="imagen-globo">
-                            <h:graphicImage library="img" name="alumno/pop-art/mensaje9.svg"/>
+                            <h3 class="titulo-mapa-11">Secuence Order</h3>
                         </div>
                     </div>
                     <div class="uk-hidden@s">
-                        <div class="imagen-globo-small">
-                            <h:graphicImage library="img" name="alumno/pop-art/mensaje9.svg"/>
-                        </div>
+                        <h3 class="titulo-mapa-11 uk-text-center uk-margin-top">Secuence order</h3>
                         <div class="imagen-secuencia-small">
                             <h:graphicImage library="img" name="mounstro/whose.svg"/>
                         </div>
-
                     </div>
                     <div class="caja1 posicion1 uk-padding-small uk-margin-small-bottom">
                         <form action="">
