--- a/tecolotl-web/src/main/webapp/alumno/mapa-mental/3.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mapa-mental/3.xhtml
@@ -59,7 +59,11 @@
                 <div class="uk-container fondo-mapa-orden contorno posicion-contenedor margen-cronologico">
 
                     <div class="dialogo uk-visible@s">
-                        <h:graphicImage library="img" name="alumno/pop-art/pop-art.svg" style="transform: rotateY(180deg)"/>
+                        <div class="uk-position-relative">
+                            <h3 class="uk-position-absolute titulo-mapa-3">Cronological Order Writing</h3>
+                            <h:graphicImage library="img" name="alumno/pop-art/pop-art.svg" style="transform: rotateY(180deg)"/>
+
+                        </div>
                     </div>
 
                     <div class="imagen-mapa uk-visible@s">
@@ -67,7 +71,10 @@
                     </div>
                     <div class="uk-hidden@s">
                         <div class="dialogo-small">
-                            <h:graphicImage library="img" name="alumno/pop-art/pop-art.svg" style="transform: rotateY(180deg)"/>
+                            <div class="uk-position-relative">
+                                <h3 class="uk-position-absolute titulo-mapa-3">Cronological Order Writing</h3>
+                                <h:graphicImage library="img" name="alumno/pop-art/pop-art.svg" style="transform: rotateY(180deg)"/>
+                            </div>
                         </div>
                         <div class="imagen-mapa-small">
                             <h:graphicImage library="img" name="mounstro/who.svg" />
