--- a/tecolotl-web/src/main/webapp/alumno/mapa-mental/2.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mapa-mental/2.xhtml
@@ -53,7 +53,9 @@
     <ui:define name="contenido">
         <h:outputStylesheet library="css" name="/alumno/mapa-efecto.css"/>
         <div class="uk-section margen-superior">
+            <h1 class="uk-text-center titulo-mapa-2">Blank cause and effect Diagram</h1>
             <div class="uk-container fondo-mapa-efecto margen-mapa-efecto contenedor-efecto ">
+
                 <div class="imagen-pez uk-margin-auto">
                     <h:graphicImage library="img" name="/alumno/pescado.svg"/>
                 </div>
