--- a/tecolotl-web/src/main/webapp/alumno/mapa-mental/4.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/mapa-mental/4.xhtml
@@ -61,11 +61,11 @@
                     <h:graphicImage library="img" name="alumno/pop-art/popart-amarillo.svg" styleClass="uk-visible@m"/>
                     <div class="uk-position-absolute letra-posicion uk-visible@m">
                         <h3 class="uk-text-uppercase">Compare and contrast</h3>
-                        <p>how two thigs are a like and how they are diferent</p>
+                        <p>How two thigs are a like and how they are diferent</p>
                     </div>
                     <div class="letra-posicion uk-hidden@m fondo-pop">
                         <h6 class="uk-text-uppercase uk-text-center">Compare and contrast</h6>
-                        <p class="uk-text-small uk-text-center">how two thigs are a like and how they are diferent</p>
+                        <p class="uk-text-small uk-text-center">How two thigs are a like and how they are diferent</p>
                     </div>
                 </div>
                 <div class="uk-position-relative ">
