--- a/tecolotl-web/src/main/webapp/alumno/tareas-alumno.xhtml
+++ b/tecolotl-web/src/main/webapp/alumno/tareas-alumno.xhtml
@@ -57,7 +57,7 @@
             <div data-uk-filter="target: .js-filter">
 
                 <h:panelGroup layout="block" styleClass="uk-grid js-filter uk-margin-medium-top uk-margin-large-bottom" pt:uk-grid="">
-                    <ui:repeat value="#{tareasAlumnoControlador.tareaModeloLista}" var="tareaModelo">
+                    <ui:repeat value="#{alumnoControlador.tareaActvidadModeloLista}" var="tareaActvidadModelo">
                         <h:panelGroup layout="block" styleClass="uk-width-1-3@m " pt:data-tags="a beautiful landscape - nature outdoor">
                             <div class="uk-card uk-card-default uk-card-small uk-card-hover card-border ">
                                 <div class="uk-card-header border-card">
@@ -65,71 +65,62 @@
                                         <div class="uk-width-expand">
                                             <h:graphicImage styleClass="uk-border-circle" library="img" name="mounstro/3ojos.svg" width="30" height="30" />
                                             <span class="cat-txt">
-                                                <h:outputText value="#{tareaModelo.asignacion}">
+                                                <h:outputText value="#{tareaActvidadModelo.asignacion}">
                                                     <f:convertDateTime locale="en_UK" timeStyle="short" type="both" dateStyle="full"/>
                                                 </h:outputText>
                                             </span>
                                         </div>
                                         <div class="uk-width-auto uk-text-right uk-text-muted">
-                                            <h:outputText styleClass="uk-margin-small-right" pt:uk-icon="icon:clock"/>#{tareaModelo.reproducciones}
+                                            <h:outputText styleClass="uk-margin-small-right" pt:uk-icon="icon:clock"/>#{tareaActvidadModelo.reproducciones}
                                         </div>
                                     </h:panelGroup>
                                 </div>
                                 <div class="uk-card-media-top">
                                     <h:panelGroup layout="block" pt:uk-spinner=""/>
                                     <h:panelGroup layout="block" styleClass="uk-inline " pt:uk-lightbox="">
-                                        <img src="https://i.ytimg.com/vi/0_1NU60qHWs/mqdefault.jpg"/>
-                                        <h:link styleClass="uk-position-center uk-icon" pt:uk-icon="icon: youtube; ratio: 3" pt:href="https://www.youtube.com/watch?v=#0_1NU60qHWs"/>
+                                        <img src="https://i.ytimg.com/vi/#{tareaActvidadModelo.idActividad}/mqdefault.jpg"/>
+                                        <h:link styleClass="uk-position-center uk-icon" pt:uk-icon="icon: youtube; ratio: 3" pt:href="https://www.youtube.com/watch?v=#{tareaActvidadModelo.idActividad}"/>
                                     </h:panelGroup>
                                     <!--                                    <div class="video-error"><h:graphicImage library="img" name="video-error.svg" width="120" height="120"/> </div>-->
                                 </div>
                                 <div class="uk-card-body">
                                     <h6 class="uk-margin-small-bottom uk-margin-remove-adjacent uk-text-bold uk-text-small">dato3</h6>
-                                    <p class="uk-text-small uk-text-muted ">#{tareaModelo.id}</p>
+                                    <p class="uk-text-small uk-text-muted ">#{tareaActvidadModelo.id}</p>
                                 </div>
                                 <div class="uk-card-footer">
-                                    <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-grid-divider uk-flex uk-flex-middle" pt:data-uk-grid="">
-                                        <div class="uk-width-expand ">
-                                            <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-child-width-1-5" pt:uk-grid="">
-                                                <div>
-                                                    <h:form>
-                                                        <h:link action="#{alumnoControlador.seleccion(tareaModelo)}" outcome="transcript-final">
-                                                            <f:param name="idVideo" value="00000000000"/>
+                                    <h:form>
+                                        <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-grid-divider uk-flex uk-flex-middle" pt:data-uk-grid="">
+                                            <div class="uk-width-expand ">
+                                                <h:panelGroup layout="block" styleClass="uk-grid uk-grid-small uk-child-width-1-5" pt:uk-grid="">
+                                                    <div>
+                                                        <h:commandLink action="#{alumnoControlador.seleccion(tareaActvidadModelo)}">
                                                             <h:graphicImage pt:data-uk-tooltip="title: Listening" styleClass="uk-icon-image uk-svg" library="img" name="icono/listen.svg"/>
-                                                        </h:link>
-                                                    </h:form></div>
-                                                <div>
-                                                    <h:form>
-                                                        <h:link action="#{alumnoControlador.seleccion(tareaModelo)}" outcome="">
+                                                        </h:commandLink>
+                                                    </div>
+                                                    <div>
+                                                        <h:link action="#{alumnoControlador.seleccion(tareaActvidadModelo)}" outcome="">
                                                             <h:graphicImage pt:data-uk-tooltip="title: Trasncript" styleClass="uk-icon-image uk-svg" library="img" name="icono/transcript1.svg" />
                                                         </h:link>
-                                                    </h:form>
-                                                </div>
-                                                <div>
-                                                    <h:form>
-                                                        <h:link action="#{alumnoControlador.seleccion(tareaModelo)}" outcome="">
+                                                    </div>
+                                                    <div>
+                                                        <h:link action="#{alumnoControlador.seleccion(tareaActvidadModelo)}" outcome="">
                                                             <h:graphicImage  pt:data-uk-tooltip="title: Reading" styleClass="uk-icon-image uk-svg " library="img" name="icono/reading.svg" />
                                                         </h:link>
-                                                    </h:form>
-                                                </div>
-                                                <div>
-                                                    <h:form>
-                                                        <h:link action="#{alumnoControlador.seleccion(tareaModelo)}" outcome="">
+                                                    </div>
+                                                    <div>
+                                                        <h:link action="#{alumnoControlador.seleccion(tareaActvidadModelo)}" outcome="">
                                                             <h:graphicImage pt:data-uk-tooltip="title: Grammar" styleClass="uk-icon-image uk-svg " library="img" name="icono/gramatica.svg" />
                                                         </h:link>
-                                                    </h:form>
-                                                </div>
-                                                <div>
-                                                    <h:form>
-                                                        <h:link action="#{alumnoControlador.seleccion(tareaModelo)}" outcome="">
+                                                    </div>
+                                                    <div>
+                                                        <h:link action="#{alumnoControlador.seleccion(tareaActvidadModelo)}" outcome="">
                                                             <h:graphicImage pt:data-uk-tooltip="title: Quiz" styleClass="uk-icon-image uk-svg " library="img" name="icono/quizcalifica.svg" />
                                                         </h:link>
-                                                    </h:form>
-                                                </div>
-                                            </h:panelGroup>
-                                        </div>
-
-                                    </h:panelGroup>
+                                                    </div>
+                                                </h:panelGroup>
+                                            </div>
+                                        </h:panelGroup>
+                                    </h:form>
                                 </div>
                             </div>
                         </h:panelGroup>
@@ -138,7 +129,6 @@
                 </h:panelGroup>
             </div>
         </div>
-<!--        <h:outputScript library="js" name="/alumno/biblioteca-alumno.js"/>-->
     </ui:define>
 </ui:composition>
 </html>
